# evalframe

./: .busted  .gitignore  README.md
doc/: design.txt
evalframe/: init.lua  std.lua  variants.lua
evalframe/eval/: init.lua  loader.lua  report.lua  runner.lua  stats.lua
evalframe/model/: binding.lua  case.lua  grader.lua  scorer.lua
evalframe/presets/: graders.lua  llm_graders.lua  scorers.lua
evalframe/providers/: algocline.lua  claude_cli.lua  mock.lua
evalframe/swarm/: actions.lua  analysis.lua  config.lua  env.lua  graders.lua  init.lua  provider.lua  trace.lua
examples/: claude_eval.lua  math_eval.lua  swarm_eval.lua
host/: Cargo.toml  build.rs  release.toml
host/lua/: evalframe_cli.lua
host/src/: main.rs
spec/: binding_spec.lua  busted_bootstrap.lua  case_spec.lua  e2e_spec.lua  grader_spec.lua  llm_grader_spec.lua  loader_spec.lua  provider_algocline_spec.lua  provider_spec.lua  report_spec.lua  scorer_spec.lua  spec_helper.lua  stats_spec.lua  std_spec.lua  variants_spec.lua
spec/fixtures/: malicious_cases.lua  malicious_io.lua  malicious_require.lua  returns_string.lua  valid_cases.lua
spec/swarm/: actions_spec.lua  analysis_spec.lua  config_spec.lua  e2e_spec.lua  env_spec.lua  graders_spec.lua  provider_spec.lua  trace_spec.lua
