[package]
name = "evalframe"
version = "0.2.0"
edition = "2021"
description = "Standalone eval framework for LLM outputs — Lua DSL with Rust host"
license = "MIT"
repository = "https://github.com/ynishi/evalframe"
homepage = "https://github.com/ynishi/evalframe"
keywords = ["eval", "llm", "lua", "testing", "benchmark"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "../README.md"

[[bin]]
name = "evalframe"
path = "src/main.rs"

[dependencies]
senl = { version = "0.3.1", features = ["full"] }
