[package]
name = "evalframe"
version = "0.3.0"
edition = "2021"
description = "Standalone eval framework for LLM outputs — Lua DSL with Rust host"
license = "MIT"
repository = "https://github.com/ynishi/evalframe"
homepage = "https://github.com/ynishi/evalframe"
keywords = ["eval", "llm", "lua", "testing", "benchmark"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "../README.md"
build = "build.rs"
include = ["src/", "build.rs", "lua/", "Cargo.toml", "Cargo.lock"]

[[bin]]
name = "evalframe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
mlua = { version = "0.11", features = ["lua54", "vendored"] }
mlua-batteries = { version = "0.2.1", features = ["json", "fs", "time", "http"] }
mlua-pkg = "0.2.1"
mlua-lspec = "0.2.0"
